# testCMakePackage

./: LICENSE  README.md
testCMake/: CMakeLists.txt
testCMake/src/: CMakeLists.txt  testComp.cpp  testComp.hpp  testComp2.cpp  testComp2.hpp  testComp3dep2.cpp  testComp3dep2.hpp
testCMake/tests/: CMakeLists.txt  test.cpp
testCMakeUser/: CMakeLists.txt
testCMakeUser/src/: CMakeLists.txt  testUser.cpp
